--- a/frontend/src/styles/SavedSpotCard.scss
+++ b/frontend/src/styles/SavedSpotCard.scss
@@ -4,9 +4,11 @@
   color: #000000;
   text-decoration: none;
   width: 100%;
+  height: 500px;
   display: flex;
   flex-direction: column;
   gap: 0.65rem;
+  padding: 1.5rem;
   padding-bottom: 0.75rem;
 }
 
