--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -4,10 +4,11 @@
   color: #000000;
   text-decoration: none;
   width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   gap: 0.65rem;
-  padding-bottom: 0.75rem;
+  padding: 1.5rem;
 }
 
 .visitCard__container:hover .visitCard__image img {
