--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import '_theme.scss';
 
 body {
   margin: 0;
@@ -13,10 +14,9 @@ body {
   transform: translate(-50%, -50%);
   text-align: center;
   color: white;
- 
 }
 
-.header__title{
+.header__title {
   font-size: 50px;
   padding-bottom: 24px;
   font-weight: bolder;
@@ -33,16 +33,26 @@ body {
   height: auto;
 }
 
+.search__wrapper {
+  position: relative;
+}
+
+.home-search__icon {
+  color: $text-grey;
+  position: absolute;
+  left: 18px;
+  top: 16px;
+}
+
 .homepage-search__input { 
-  font-size: 1rem; 
+  font-size: 1rem;
   width: 500px;
   height: 52px;
   box-shadow: 0 4px 8px -2px rgba(0,0,0,.3);
-  padding-left: 24px;
-  padding-right: 24px;
   border-radius: 9999px;
   border: none;
-  padding: 0.5rem 1.5rem;
+  outline-color: #949494;
+  padding-left: 45px;
 }
 
 .list__spots{
