--- a/frontend/src/styles/SavedSpotCard.scss
+++ b/frontend/src/styles/SavedSpotCard.scss
@@ -14,6 +14,7 @@
   h2, h5 {
     font-size: 16px;
     font-weight: 700;
+    margin-bottom: 0.25rem;
 
     span {
       position: relative;
@@ -70,11 +71,11 @@
   margin-left: 7px;
 }
 
-.savedSpotCard__title h4 {
-  margin-left: 0.5em;
-  font-size: 14px;
-  font-weight: 800px;
-}
+// .savedSpotCard__title h4 {
+//   margin-left: 0.5em;
+//   font-size: 14px;
+//   font-weight: 800px;
+// }
 
 .savedSpotCard__location {
   font-size: 12px;
