--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -58,11 +58,26 @@ body {
 .list__spots{
   display: flex;
   flex-direction: column;
-  width: 60%;
   margin: auto;
   justify-content: center;
-  padding-top: 24px;
-  margin-bottom: 64px;
+}
+
+.spots__near-user {
+  padding: 3rem 0;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.spots__saved--container {
+  width: 100%;
+  padding: 3rem 0;
+  // background-color: #efefef;
+  // box-shadow: $shadow-grey 0px 4px 8px 0px;
+}
+
+.spots__saved {
+  width: 60%;
+  margin: 0 auto;
 }
 
 .spots__carousel-title{
@@ -83,3 +98,32 @@ body {
 .slide-down-paragraph {
   animation: slide-down 0.8s;
  }
+
+.home__carousel-container {
+  position:relative;
+}
+
+.home__carousel {
+  position:unset;
+
+  .react-multiple-carousel__arrow {
+    position:absolute;
+    background-color: #fff;
+    color: #000;
+    box-shadow: $shadow-grey 0px 4px 8px 0px;
+
+    &::before {
+      color: #000;
+    }
+  }
+
+  .react-multiple-carousel__arrow--left {
+    left: calc(-4% + 1px);
+    top: calc(50% - 70px); 
+  }
+
+  .react-multiple-carousel__arrow--right {
+    right: calc(-4% + 1px);
+    top: calc(50% - 70px);
+  }
+}
