fix: header margin

--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -9,7 +9,7 @@ body {
 
 .welcome__section {
   position: absolute;
-  top: 50%;
+  top: 400px;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
