--- a/frontend/src/styles/SpotCard.scss
+++ b/frontend/src/styles/SpotCard.scss
@@ -4,6 +4,7 @@
   color: #000000;
   text-decoration: none;
   width: 100%;
+  height: 500px;
   display: flex;
   flex-direction: column;
   gap: 0.65rem;
