--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -18,6 +18,36 @@
   }
 }
 
+.oneSpot-visitCard__container {
+  color: #000000;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.65rem;
+  padding: 0rem;
+  padding-bottom: 0.75rem;
+
+  h2, h5 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 0.25rem;
+  }
+
+  .visitCard__image {
+    width: 100%;
+    border-radius: 24px;
+    overflow: hidden;
+  
+    img {
+      transition: ease-in 0.25s;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 h3 {
   font-size: 13px;
   font-weight: 700;
