--- a/frontend/src/styles/UserSpots.scss
+++ b/frontend/src/styles/UserSpots.scss
@@ -32,4 +32,27 @@
 .user-spots__map {
   width: 100%;
   height: 650px;
+  position: relative;
+
+  .user-spots__legend {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    padding: 0.75rem;
+    position: absolute;
+    left: 2rem;
+    bottom: 2rem;
+    z-index: 9999;
+    background-color: $background-grey;
+    color: $text-grey;
+    border-radius: 12px;
+
+    .user-spots__legend-item {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 0.5rem;
+    }
+  }
+
 }
