--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -61,6 +61,39 @@
   padding: 1.5rem 0;
 }
 
+.home__carousel-wrapper {
+  position: relative;
+}
+
+.home__carousel {
+  position: unset !important;
+
+  .react-multiple-carousel__arrow {
+    position:absolute;
+    background-color: #fff;
+    color: #000;
+    box-shadow: $shadow-grey 0px 4px 8px 0px;
+
+    &::before {
+      color: #000;
+    }
+
+    &:hover {
+      background-color: #fff;
+    }
+  }
+
+  .react-multiple-carousel__arrow--left {
+    left: calc(-6% + 1px);
+    top: calc(50% - 50px); 
+  }
+
+  .react-multiple-carousel__arrow--right {
+    right: calc(-6% + 1px);
+    top: calc(50% - 50px);
+  }
+} 
+
 .spots__carousel-title {
   padding: 0 1rem;
 }
