--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -1,35 +1,44 @@
 @import '_theme.scss';
 @import 'Profile.scss';
 
-.profile .user-info__container{
+.user-info__containter {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+}
+
+.card__image {
+  width: 50px;
+  height: 50px;
+  background-color: #e6e6e6;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.card__info {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 300px;
-  height: 400px;
-  padding: 20px;
-  background-color: #FFFFFF;
-  box-shadow: $shadow-grey 0px 2px 8px 0px;
-  border-radius: 24px;
-  
- }
+}
 
+.card__info h1 {
+  margin: 0;
+  margin-bottom: 5px;
+}
 
- .card__image {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin: 2rem 1.5rem;
- }
- 
- .card__name {
-  margin: 10px 0;
-  font-size: 24px;
- }
- 
- .card__location {
-  margin: 5px 0;
-  font-size: 16px;
-  color: #888;
- }
+.card__info p {
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.profile-stats {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.profile-stats p {
+  margin: 0;
+  margin-right: 10px;
+}
