--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -3,10 +3,14 @@
 
 .user-info__containter {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  width: 300px;
+  height: 400px;
   padding: 20px;
   background-color: #f7f7f7;
-  border-radius: 5px;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
+  border-radius: 24px;
 }
 
 .card__image {
