--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -1,7 +1,7 @@
 @import '_theme.scss';
 @import 'Profile.scss';
 
-.user-info__containter {
+.user-info__container {
   display: flex;
   flex-direction: column;
   align-items: center;
