--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -14,11 +14,11 @@
 }
 
 .card__image {
-  width: 50px;
-  height: 50px;
-  background-color: #e6e6e6;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
-  margin-right: 20px;
+  object-fit: cover;
+  margin: 2rem 1.5rem;
 }
 
 .card__info {
