--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -8,6 +8,7 @@
   align-items: center;
   padding: 24px;
   font-family: Roboto, sans serif;
+  margin-top: 100px;
 
   span {
     font-size: 12px;
