--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -116,12 +116,16 @@ $square-dimension: 650px;
   align-items: center;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .one-visit__comments--container {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: scroll;
+  overflow-y: scroll;
 
   .one-visit__comments--posted-container {
     display: flex;
@@ -130,8 +134,7 @@ $square-dimension: 650px;
     height: 100%;
 
     .one-visit__comments--posted {
-      overflow-y: scroll;
-      height: calc(100%);
+      height: 100%;
       width: 100%;
       display: flex;
       flex-direction: column;
