--- a/frontend/src/styles/SpotCard.scss
+++ b/frontend/src/styles/SpotCard.scss
@@ -11,6 +11,8 @@
   padding: 1.5rem;
   padding-bottom: 0.75rem;
 
+
+
   h2, h5 {
     font-size: 16px;
     font-weight: 700;
@@ -87,5 +89,21 @@
     transition: ease-in 0.25s;
     width: 100%;
     height: 100%;
+  }
+}
+
+.spotCard {
+  position: relative;
+}
+.spotCard__save-btn {
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  &:hover {
+    cursor: pointer;
   }
 }
