--- a/frontend/src/styles/SpotCard.scss
+++ b/frontend/src/styles/SpotCard.scss
@@ -97,11 +97,17 @@
 }
 .spotCard__save-btn {
   text-decoration: none;
-  background-color: transparent;
+  background-color: rgba(245, 245, 245, 0.25);
+  padding: 0.5rem;
+  border-radius: 9999px;
   border: none;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 3rem;
+  right: 3rem;
+
+  svg {
+    opacity: 1;
+  }
 
   &:hover {
     cursor: pointer;
