--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   margin: auto;
   margin-top: 1rem;
-  border-radius: 24px 24px 0 0 ;
+  border-radius: 24px ;
   box-shadow: $shadow-grey 0px 2px 8px 0px;
   font-family: Roboto, Helvetica, sans-serif;
   font-size: 16px;
