--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -28,6 +28,10 @@
   justify-content: center;
   margin-bottom: 3rem;
 
+  h1 {
+    padding-bottom: 1rem;
+  }
+
   .user-info__location {
     justify-content: center;
     align-items: center;
@@ -53,6 +57,10 @@
   flex-direction: row;
   justify-content: center;
   gap: 4rem;
+
+  .user-info__counts-number {
+    color: black;
+  }
 }
 
 .user-info__saved {
