--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   width: 300px;
-  height: 476px;
+  height: 500px;
   padding: 20px;
   background-color: #f7f7f7;
   box-shadow: $shadow-grey 0px 2px 8px 0px;
@@ -14,8 +14,8 @@
 }
 
 .user-info__picture {
-  width: 80px;
-  height: 80px;
+  width: 90px;
+  height: 90px;
   border-radius: 50%;
   object-fit: cover;
   margin: 2rem 1.5rem;
@@ -30,6 +30,7 @@
 
   h1 {
     padding-bottom: 1rem;
+    text-align: center;
   }
 
   .user-info__location {
