--- a/frontend/src/styles/AboutSpot.scss
+++ b/frontend/src/styles/AboutSpot.scss
@@ -1,4 +1,6 @@
 @import '_theme.scss';
+@import 'index.scss';
+
 
 .about-spot { 
   width: 100%;
@@ -31,7 +33,7 @@
 
 .about-spot__label {
   font-size: 12px;
-  background-color: $light-orange;
+  background-color: var(--light-highlight);
   border-radius: 9999px;
   padding: 0.5rem 0.7rem;
   width: auto;
@@ -42,7 +44,7 @@
 }
 
 .about-spot__label--pink {
-  background-color: $light-pink;
+  background-color: var(--light-pink);
 }
 
 .about-spot__rating {
@@ -62,5 +64,5 @@
   width: 20px;
   margin: 1px;
   align-self: center;
-  color: $sunny;
+  color: var(--sunny);
 }
