--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,5 +1,8 @@
 @import '_theme.scss';
 
+.body {
+}
+
 .welcome__section {
   position: absolute;
   top: 360px;
@@ -53,6 +56,7 @@
   flex-direction: column;
   margin: 1.5rem auto;
   justify-content: center;
+  background-color: var(--body_background-color);
 }
 
 .home__carousel--container {
@@ -62,7 +66,7 @@
 }
 
 .bg-grey {
-  background-color: #efefef;
+  background-color: var(--body_background-color);
   padding: 1rem 0;
 }
 
