--- a/frontend/src/styles/ViewToggle.scss
+++ b/frontend/src/styles/ViewToggle.scss
@@ -5,7 +5,7 @@
   top: 2rem;
   right: 1.5rem;
   height: 36px;
-  background-color: $button-grey;
+  background-color: var(--button-color);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   border-radius: 24px;
@@ -13,19 +13,19 @@
 
   .view-toggle__option {
     text-align: center;
-    color: $text-light-grey;
+    color: var(--text-light);
     transition: color 0.2s ease-in 0s;
     padding: 0 1rem;
 
     &:hover{
-      color:$text-grey;
+      color: var(--text-light);
       cursor: pointer;
     }
   }
 
   .view-toggle__option--selected {
-    background-color: $button-orange;
-    color: #FFFFFF;
+    background-color: var(--button-highlight-color);
+    color: var(--text-color);
     border-radius: 24px;
     overflow: visible;
     height: 40px;
@@ -38,7 +38,7 @@
 
     &:hover {
       cursor:default;
-      color:#FFFFFF;
+      color:var(--text-color);
     }
   }
 }
