--- a/frontend/src/styles/DarkModeToggle.scss
+++ b/frontend/src/styles/DarkModeToggle.scss
@@ -7,7 +7,7 @@
     width: 65px;
     height: 30px;
     position: relative;
-    display: block;
+    display: flex;
     background: #ebebeb;
     border-radius: 200px;
     box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
