--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -1,4 +1,5 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .allSpotsSearch__container {
   width: 100%;
@@ -17,14 +18,14 @@
     width: 30rem;
     padding: 0 1rem;
     background-color: #fff;
-    border: 0.8px solid $button-grey-hover;
+    border: 0.8px solid var(--button-color-hover);
     border-radius: 24px;
     outline-color: #949494;
     padding-left: 40px;
   }
 
   .allSpotsSearch__icon {
-    color: $text-grey;
+    color: var(--text-grey);
     position: absolute;
     left: 15px;
     top: 8px;
@@ -33,7 +34,7 @@
   .allSpots-btn-grey {
     height: 2rem;
     padding: 0 1rem;
-    background-color: $button-grey;
+    background-color: var(--button-color);
     border: none;
     border-radius: 24px;
     display: flex;
@@ -43,7 +44,7 @@
 
     &:hover {
       cursor: pointer;
-      background-color: $button-grey-hover;
+      background-color: var(--button-color-hover);
       transition: $transition-3;
     }
   }
