--- a/frontend/src/styles/Comment.scss
+++ b/frontend/src/styles/Comment.scss
@@ -1,4 +1,5 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .comment__container {
   display: flex;
@@ -14,7 +15,7 @@
 }
 
 .comment__bubble {
-  background-color: $background-grey;
+  background-color: var(--body-offcolor-background);
   // width: auto;
   width: 100%;
   border-radius: 18px;
@@ -36,7 +37,7 @@
 
     p {
       font-size: 10px;
-      color: $text-grey;
+      color: var(--text-grey);
     }
   }
 }
