--- a/frontend/src/styles/ConditionsCard.scss
+++ b/frontend/src/styles/ConditionsCard.scss
@@ -1,4 +1,5 @@
 @import './theme';
+@import 'index.scss';
 
 .conditions-card {
   font-size: 14px;
@@ -7,7 +8,7 @@
   align-items: center;
   padding: 0.5rem 1.5rem;
   gap: 0.25rem;
-  background-color: $background-grey;
+  background-color: var(--weather);
   border-radius: 24px;
   height: 100px;
   width: 100px;
@@ -23,6 +24,6 @@
   gap: 2px;
 
   .conditions-card__min-temp {
-    color: $text-light-grey;
+    color: var(--text-light);
   }
 }
