--- a/frontend/src/styles/FormDetails.scss
+++ b/frontend/src/styles/FormDetails.scss
@@ -1,4 +1,5 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .formDetails__container {
   display: flex;
@@ -57,8 +58,9 @@
 
 .formDetails__input--text {
   border-radius: 10px;
+  color: var(--text-grey);
   background-color: inherit;
-  border: 1px solid $text-grey;
+  border: 1px solid var(--text-grey);
   padding: 0.8rem 1rem;
   font-size: 14px;
   width: 100%;
