--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,4 +1,5 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .body {
 }
@@ -7,7 +8,7 @@
   position: absolute;
   top: 360px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -30%);
   text-align: center;
   color: white;
 }
@@ -44,7 +45,7 @@
   font-size: 1rem;
   width: 500px;
   height: 52px;
-  box-shadow: 0 4px 8px -2px rgba(0,0,0,.3);
+  box-shadow: 0 4px 8px -2px var(--shadow);
   border-radius: 9999px;
   border: none;
   outline-color: #949494;
@@ -79,17 +80,17 @@
 
   .react-multiple-carousel__arrow {
     position:absolute;
-    background-color: #fff;
-    color: #000;
-    box-shadow: $shadow-grey 0px 4px 8px 0px;
+    background-color: var(--body_background-color);
+    color: var(--text-color);
+    box-shadow: var(--shadow) 2px 2px 10px 10px;
 
     &::before {
-      color: #000;
+      color: var(--text-color);
     }
 
     &:hover {
-      background-color: #fff;
-      box-shadow: $shadow-grey 0px 8px 15px 2px;
+      background-color: var(--body-offcolor-background);
+      box-shadow: var(--shadow) 4px 4px 4px 4px;
     }
   }
 
