--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -1,16 +1,17 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .one-spot{
   max-width: 1020px;
   min-width: 1020px;
   height: max-content;
-  background-color: #ffffff;
+  background-color: var(--body_background);
   display: flex;
   flex-direction: column;
   margin: auto;
   margin-top: 1rem;
   border-radius: 24px ;
-  box-shadow: $shadow-grey 0px 2px 8px 0px;
+  box-shadow: var(--shadow) 0px 2px 8px 0px;
   font-family: Roboto, Helvetica, sans-serif;
   font-size: 16px;
   position: relative;
@@ -52,7 +53,7 @@
 .one-spot__directions {
   text-decoration: none;
   color: #FFFFFF;
-  background-color: $button-orange;
+  background-color: var(--button-highlight-color);
   border-radius: 9999px;
   padding: 0.5em 2.5em;
   align-self: flex-end;
@@ -61,7 +62,7 @@
 
   &:hover {
     cursor: pointer;
-    background-color: $button-orange-hover;
+    background-color: var(--button-highlight-hover);
     transition: $transition-3;
   }
 }
@@ -69,7 +70,7 @@
 .one-spot__create-visit {
   text-decoration: none;
   color: #FFFFFF;
-  background-color: $button-orange;
+  background-color: var(--button-highlight-color);
   border-radius: 9999px;
   padding: 0.5em 2.5em;
   align-self: flex-end;
@@ -78,7 +79,7 @@
 
   &:hover {
     cursor: pointer;
-    background-color: $button-orange-hover;
+    background-color: var(--button-highlight-hover);
     transition: $transition-3;
   }
 }
@@ -90,7 +91,7 @@
 
   .one-spot__save {
     border: none;
-    background-color: #FFFFFF;
+    background-color: var(--body_background);
     display: inline-block;
     position: absolute;
     top: 0;
@@ -111,7 +112,7 @@
 }
 .one-spot__btn--add-spot {
   color: #fff;
-  background-color: $button-orange;
+  background-color: var(--button-highlight-color);
   text-decoration: none;
   border-radius: 9999px;
   width: auto;
@@ -157,7 +158,7 @@
 
 .one-spot__btn--add-spot:hover {
   cursor: pointer;
-  background-color: $button-orange-hover;
+  background-color: var(--button-highlight-hover);
   max-width: 200px;
 
   .one-spot__btn--text {
