--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -1,10 +1,17 @@
 @import '_theme.scss';
+@import 'index.scss';
+
 $square-dimension: 650px;
+
+body {
+  background-color: var(--body-offcolor-background);
+}
 
 .one-visit__container {
   margin: 2rem auto;
-  background-color: #fff;
-  box-shadow: $shadow-grey 0px 2px 8px 0px;
+  background-color: var(--body_background);
+  color: var(--text-color);
+  box-shadow: var(--shadow) 0px 2px 8px 0px;
   width: fit-content;
   height: auto;
   border-radius: 24px;
@@ -48,7 +55,7 @@ $square-dimension: 650px;
 
   p {
     font-size: 12px;
-    color: $text-grey;
+    color: var(--text-grey);
   }
 }
 
@@ -72,14 +79,14 @@ $square-dimension: 650px;
 
   p {
     font-size: 14px;
-    color: $text-grey;
+    color: var(--text-grey);
   }
 }
 
 .one-visit--line {
   width: 100%;
   border: none;
-  border-top: 1.5px solid $shadow-grey;
+  border-top: 1.5px solid var(--shadow);
 }
 
 .one-visit__visit-details--container {
@@ -146,12 +153,13 @@ $square-dimension: 650px;
 .one-visit__comments--add {
   input {
     border-radius: 10px;
-    background-color: $background-grey;
+    background-color: var(--body-offcolor-background);
+    color: var(--text-color);
     border: none;
     padding: 0.8rem 1rem;
     font-size: 14px;
     width: 100%;
-    outline-color: $text-light-grey;
+    outline-color: var(--text-light);
   }
 
 }
@@ -161,7 +169,7 @@ $square-dimension: 650px;
 }
 
 .comment-icon {
-  color: $text-grey;
+  color: var(--text-grey);
   position: absolute;
   right: 15px;
   top: 12.5px;
