--- a/frontend/src/styles/SavedSpotCard.scss
+++ b/frontend/src/styles/SavedSpotCard.scss
@@ -1,4 +1,5 @@
 @import "_theme.scss";
+@import "index.scss";
 
 .savedSpotCard__container {
   color: #000000;
@@ -20,7 +21,7 @@
       position: relative;
       font-weight: 400;
       font-size: 15px;
-      color: $text-light-grey;
+      color: var(--text-light);
       bottom: 0.02rem;
     }
   }
@@ -28,13 +29,13 @@
   h3 {
     font-size: 13px;
     font-weight: 700;
-    color: $text-grey;
+    color: var(--text-grey);
   }
 
   h4 {
     font-size: 13px;
     font-weight: 400;
-    color: $text-light-grey;
+    color: var(--text-light);
     padding: 0;
   }
 }
@@ -71,14 +72,8 @@
   margin-left: 7px;
 }
 
-// .savedSpotCard__title h4 {
-//   margin-left: 0.5em;
-//   font-size: 14px;
-//   font-weight: 800px;
-// }
-
 .savedSpotCard__location {
   font-size: 12px;
   font-weight: 400;
-  color: $text-light-grey;
+  color: var(--text-light);
 }
