--- a/frontend/src/styles/SideBar.scss
+++ b/frontend/src/styles/SideBar.scss
@@ -1,4 +1,5 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .sideBar__container {
   width: 500px;
@@ -7,11 +8,11 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 0.75rem;
-  box-shadow: $shadow-grey 0px 2px 8px 0px;
+  box-shadow: var(--shadow) 0px 8px 8px 0px;
 }
 
 .sideBar__error {
   margin: 0 auto;
   padding-top: 4rem;
-  color: $text-light-grey;
+  color: var(--text-light);
 }
