--- a/frontend/src/styles/SpotCard.scss
+++ b/frontend/src/styles/SpotCard.scss
@@ -1,4 +1,5 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .spotCard__container {
   color: #000000;
@@ -22,7 +23,7 @@
       position: relative;
       font-weight: 400;
       font-size: 15px;
-      color: $text-light-grey;
+      color: var(--text-light);
       bottom: 0.02rem;
     }
   }
@@ -30,13 +31,13 @@
   h3 {
     font-size: 13px;
     font-weight: 700;
-    color: $text-grey;
+    color: var(--text-grey);
   }
 
   h4 {
     font-size: 13px;
     font-weight: 400;
-    color: $text-light-grey;
+    color: var(--text-light);
     padding: 0;
   }
 
@@ -61,6 +62,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  color: var(--text-color);
 }
 
 .spotCard__rating--container {
@@ -79,7 +81,7 @@
 }
 
 .spotCard__rating--star {
-  color: $sunny;
+  color: var(--sunny);;
 }
 
 .spotCard__image {
@@ -99,7 +101,7 @@
 }
 .spotCard__save-btn {
   text-decoration: none;
-  background-color: rgba(245, 245, 245, 0.25);
+  background-color: var(--button-disabled);
   padding: 0.5rem;
   border-radius: 9999px;
   border: none;
