--- a/frontend/src/styles/WeatherBar.scss
+++ b/frontend/src/styles/WeatherBar.scss
@@ -1,4 +1,5 @@
 @import '_theme.scss';
+@import 'index.scss';
 
 .weather-bar {
   display:flex;
@@ -36,7 +37,7 @@
   gap: 2px;
   justify-content: center;
   align-items: center;
-  background-color: $background-grey;
+  background-color: var(--weather);
   border-radius: 24px;
   width: max-content;
   height: 100px;
