--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -16,12 +16,14 @@
   --light-orange: #FCBC94;
   --light-pink: #F7B09D;
   --sunny: #FCA712;
+  --shadow: #63636333;
+  --weather: rgba(160, 181, 190, 0.44);
 }
 
 [data-theme= "dark"] {
   --body_background: rgb(14, 10, 32);
   --body-offcolor-background: rgb(22, 16, 51);
-  --text-color: rgb(248, 241, 241);
+  --text-color: rgb(238, 233, 233);
   --text-light: #757575;
   --text-grey: #5d5d5d;
   --button-highlight-color: #FCA712;
@@ -32,6 +34,8 @@
   --light-orange: #FCBC94;
   --light-pink: #F7B09D;
   --sunny: #FCA712;
+  --shadow: rgb(73, 35, 100);
+  --weather: rgb(22, 16, 51);
 }
 
 html {
