--- a/frontend/src/styles/ViewToggle.scss
+++ b/frontend/src/styles/ViewToggle.scss
@@ -26,7 +26,7 @@
 
   .view-toggle__option--selected {
     background-color: var(--button-highlight-color);
-    color: var(--text-color);
+    color: var(--text-nav-button);
     border-radius: 24px;
     overflow: visible;
     height: 40px;
