--- a/frontend/src/styles/ConditionsCard.scss
+++ b/frontend/src/styles/ConditionsCard.scss
@@ -5,22 +5,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.5rem 1.5rem;
-  gap: 0.25rem;
+  padding: 0.75rem;
+  gap: 0.5rem;
   background-color: $background-grey;
   border-radius: 24px;
-  height: 100px;
   width: 100px;
 
-
   img {
-    height: 40px;
+    height: 42px;
   }
 }
 
 .conditions-card__temps {
   display: flex;
-  gap: 2px;
+  gap: 4px;
 
   .conditions-card__min-temp {
     color: $text-light-grey;
