--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -38,7 +38,7 @@
 .one-spot__header {
   width: 100%;
   height: 350px;
-  background-image: linear-gradient(180deg, rgba(255, 94, 0, 0.574) 35%, rgba(1, 3, 54, 0.654) 100%), var(--one-spot-img);
+  background-image: linear-gradient(180deg, rgba(255,93,0,0.48082983193277307) 35%, rgba(1,3,54,0.6881127450980392) 100%), var(--one-spot-img);
   background-position-x: center;
   background-position-y: 55%;
   border-radius: 24px 24px 0 0;
