fix: update margins

--- a/frontend/src/styles/UserSpots.scss
+++ b/frontend/src/styles/UserSpots.scss
@@ -20,13 +20,13 @@
 .user-spots__saves {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 0.5em;
+  grid-gap: 1.5rem;
 }
 
 .user-spots__visits {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 0.5em;
+  grid-gap: 1.5rem;
 }
 
 .user-spots__map {
