--- a/frontend/src/styles/SpotCard.scss
+++ b/frontend/src/styles/SpotCard.scss
@@ -4,7 +4,6 @@
   color: #000000;
   text-decoration: none;
   width: 100%;
-  height: 500px;
   display: flex;
   flex-direction: column;
   gap: 0.65rem;
@@ -86,6 +85,7 @@
   width: 100%;
   border-radius: 24px;
   overflow: hidden;
+  aspect-ratio: 1 / 1 ;
 
   img {
     transition: ease-in 0.25s;
