--- a/frontend/src/styles/SavedSpotCard.scss
+++ b/frontend/src/styles/SavedSpotCard.scss
@@ -7,7 +7,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  gap: 0.65rem;
+  gap: 0.5rem;
 
   h2, h5 {
     font-size: 16px;
@@ -51,7 +51,7 @@
   }
 }
 
-.savedSpot-homepage__image{
+.savedSpot-homepage__image {
   width: 100%;
   border-radius: 24px;
   overflow: hidden;
@@ -63,17 +63,15 @@
   }
 }
 
-.savedSpotCard__header  {
+.savedSpotCard__header {
   display: flex;
   flex-direction: column;
-  margin-left: 7px;
 }
 
-// .savedSpotCard__title h4 {
-//   margin-left: 0.5em;
-//   font-size: 14px;
-//   font-weight: 800px;
-// }
+.savedSpotCard__title {
+  font-size: 16px;
+  font-weight: 700;
+}
 
 .savedSpotCard__location {
   font-size: 12px;
