feat: refactor login and home colours

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -4,6 +4,8 @@
 
 :root {
   --body_background: #f9f9f9;
+  --page-background: #fff;
+  --page-background-accent: #efefef;
   --body-offcolor-background: #F5F5F5;
   --text-color: black;
   --text-nav-button: rgb(25, 25, 25);
@@ -22,26 +24,28 @@
 }
 
 [data-theme= "dark"] {
-  --body_background: rgb(28, 26, 39);
+  --body_background: #252525;
+  --page-background: #2b2b2b;
+  --page-background-accent: #292929;
   --body-offcolor-background: rgb(39, 36, 54);
-  --text-color: rgb(238, 233, 233);
+  --text-color: #eee9e9;
   --text-nav-button: rgb(25, 25, 25);
   --text-light: #757575;
-  --text-grey: #5d5d5d;
-  --button-highlight-color: #FCA712;
-  --button-highlight-hover:  #F86204;
-  --button-color: #babab9d4;
-  --button-color-hover: #cacbca9a;
+  --text-grey: #909090;
+  --button-highlight-color: #F86204;
+  --button-highlight-hover: #ea4e15;
+  --button-color: #595959;
+  --button-color-hover: #515151;
   --button-disabled: #e5e5e5;
   --light-orange: #FCBC94;
   --light-pink: #F7B09D;
   --sunny: #FCA712;
-  --shadow: rgb(92, 75, 104);
+  --shadow: #111111;
   --weather: rgb(38, 30, 43);
 }
 
-html {
-  background-color: var(--body_background-color);
+body {
+  background-color: var(--body_background);
 }
 
 * {
