--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -10,6 +10,7 @@
   padding: 24px;
   font-family: Roboto, sans serif;
   margin-top: 100px;
+  color: var(--text-color);
 
   span {
     font-size: 12px;
@@ -36,6 +37,7 @@
   padding: 12px;
   margin-bottom: 24px;
   box-shadow: 0 4px 8px -2px var(--shadow);
+  background-color: var(--page-background);
 }
 
 #password {
