--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -4,7 +4,8 @@
   width: 1020px;
   height: auto;
   margin: 2rem auto;
-  background-color: var(--body_background);
+  background-color: var(--page-background);
+  color: var(--text-color);
   display: flex;
   flex-direction: column;
   border-radius: 24px;
