--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -8,8 +8,8 @@ nav {
   align-items: center;
   height: 64px;
   width: 100%;
-  box-shadow: $shadow-grey 0px 2px 8px 0px;
-  background-color: var(--body_background);
+  box-shadow: var(--shadow) 0px 2px 8px 0px;
+  background-color: var(--page-background);
 }
 
 .nav__main{
@@ -59,7 +59,7 @@ nav button {
   margin-left: 1.5rem;
   padding: 0.5rem 1rem;
   background-color: var(--button-color);
-  color: var(--text-nav-button);
+  color: var(--text-color);
   text-decoration: none;
   font-size: 13px;
   transition: $transition-3;
@@ -106,7 +106,7 @@ nav button {
   margin-left: 1.5rem;
   padding: 0.5rem 1rem;
   background-color: var(--button-color);
-  color: var(--nav--button);
+  color: var(--text-color);
   text-decoration: none;
   font-size: 13px;
   transition: $transition-3;
