--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -3,7 +3,7 @@
 
 .createSpot__container {
   margin: 2rem auto;
-  background-color: var(--body_background);
+  background-color: var(--page-background);
   color: var(--text-color);
   width: 800px;
   height: auto;
@@ -65,7 +65,7 @@
 
 .navigationButton__btn {
   background-color: var(--button-disabled);
-  color: black;
+  color: var(--text-color);
   width: 6rem;
   height: 3rem;
   border: none;
@@ -95,7 +95,7 @@
 
   &:hover {
     cursor: pointer;
-    background-color: #efefef;
+    background-color: var(--button-disabled);
     transition: $transition-3;
   }
 }
