--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -12,8 +12,8 @@
   --text-grey: #5d5d5d;
   --button-highlight-color: #F86204;
   --button-highlight-hover: #ea4e15;
-  --button-color: #151b0d14;
-  --button-color-hover: #151b0d29;
+  --button-color: #ededec;
+  --button-color-hover: #dadad8;
   --button-disabled: #e5e5e5;
   --input-outline: #949494;
   --light-orange: #FCBC94;
@@ -26,7 +26,7 @@
 [data-theme= "dark"] {
   --body_background: #252525;
   --page-background: #2b2b2b;
-  --page-background-accent: #292929;
+  --page-background-accent: #202020;
   --body-offcolor-background: #272436;
   --text-color: #eee9e9;
   --text-nav-button: #191919;
@@ -35,8 +35,8 @@
   --button-highlight-color: #F86204;
   --button-highlight-hover: #ea4e15;
   --button-color: #595959;
-  --button-color-hover: #515151;
-  --button-disabled: #e5e5e5;
+  --button-color-hover: #4a4a4a;
+  --button-disabled: #474747;
   --input-outline: #252525;
   --light-orange: #FCBC94;
   --light-pink: #F7B09D;
