--- a/frontend/src/styles/ViewToggle.scss
+++ b/frontend/src/styles/ViewToggle.scss
@@ -14,7 +14,7 @@
 
   .view-toggle__option {
     text-align: center;
-    color: var(--text-light);
+    color: var(--text-grey);
     transition: color 0.2s ease-in 0s;
     padding: 0 1rem;
 
@@ -26,7 +26,7 @@
 
   .view-toggle__option--selected {
     background-color: var(--button-highlight-color);
-    color: var(--text-nav-button);
+    color: #fff;
     border-radius: 24px;
     overflow: visible;
     height: 40px;
@@ -39,7 +39,7 @@
 
     &:hover {
       cursor:default;
-      color:var(--text-color);
+      color: #fff;
     }
   }
 }
