--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -13,6 +13,29 @@ $square-dimension: 650px;
   border-radius: 24px;
   display: flex;
   flex-direction: row;
+  position: relative;
+}
+
+.button-navigate {
+  background-color: var(--page-background);
+  color: var(--text-color);
+  width: 64px;
+  height: 64px;
+  position: absolute;
+  left: -80px;
+  border-radius: 9999px;
+  border: none;
+  box-shadow: var(--shadow) 0px 2px 8px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: $transition-3;
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: var(--shadow) 0px 8px 15px 2px;
+    transition: $transition-3;
+  }
 }
 
 .one-visit__details--container {
