--- a/frontend/src/styles/WeatherBar.scss
+++ b/frontend/src/styles/WeatherBar.scss
@@ -30,7 +30,7 @@
   gap: 0.5rem;
   justify-content: center;
   align-items: center;
-  background-color: var(--body-offcolor-background);
+  background-color: var(--weather);
   border-radius: 24px;
   height: -webkit-fill-available;
   padding: 1rem;
