--- a/frontend/src/styles/ConditionsCard.scss
+++ b/frontend/src/styles/ConditionsCard.scss
@@ -8,7 +8,7 @@
   align-items: center;
   padding: 0.75rem;
   gap: 0.5rem;
-  background-color: var(--body-offcolor-background);
+  background-color: var(--weather);
   border-radius: 24px;
   width: 100px;
 
