--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -54,7 +54,7 @@
   flex-direction: column;
   margin: 1.5rem auto;
   justify-content: center;
-  background-color: var(--body_background);
+  background-color: var(--body-background);
 }
 
 .home__carousel--container {
