--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -9,7 +9,7 @@
   width: 300px;
   height: 500px;
   padding: 20px;
-  background-color: var(--body_background);
+  background-color: var(--body-background);
   box-shadow: var(--shadow) 0px 2px 8px 0px;
   border-radius: 24px;
 }
