add hook for toggling search button class

--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -47,4 +47,12 @@
       transition: $transition-3;
     }
   }
+
+  .allspots-dropdown > ul {
+    display:none;
+  }
+
+  .allspots-dropdown > .allSpots__show {
+    display: block;
+  }
 }
