render list of search options

--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -47,5 +47,11 @@
       transition: $transition-3;
     }
   }
+
+  .allSpots__searchOption {
+    height: auto;
+    align-self: flex-start;
+    z-index: 9999;
+  }
   
 }
