change sort button color when active

--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -42,10 +42,19 @@
     gap: 0.5rem;
     transition: $transition-3;
 
+
     &:hover {
       cursor: pointer;
       background-color: var(--button-color-hover);
       transition: $transition-3;
+    }
+  }
+
+  .allSpots-btn--pressed {
+    background-color: $light-orange;
+    
+    &:hover {
+      background-color: $light-orange;
     }
   }
 
