--- a/frontend/src/styles/FilterOptionsCard.scss
+++ b/frontend/src/styles/FilterOptionsCard.scss
@@ -1,7 +1,8 @@
 @import '_theme';
 
-.sortOptions {
+.filterOptions {
   z-index: 9999;
+  height: 300px;
   overflow: scroll;
   padding: 1.5rem;
   background-color: #FFFFFF;
@@ -16,18 +17,15 @@
   li {
     display: flex;
     gap: 1rem;
-  
 
     input {
       padding: 0;
       appearance: none;
-      border-radius: 50%;
+      border-radius: 3px;
       width: 20px;
       height: 20px;
       margin: 0;
       border: 2px solid $text-light-grey;
-      transition: 0.2s all linear;
-      position: relative;
     }
 
     input:checked {
@@ -35,17 +33,7 @@
     }
 
     input:checked::before {
-      content: ''; 
-      display: block;
-      width: 10px; 
-      height: 10px;
-      background-color: $button-orange; 
-      border-radius: 50%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      
+      content: ''
     }
 
     label {
