--- a/frontend/src/styles/FilterOptionsCard.scss
+++ b/frontend/src/styles/FilterOptionsCard.scss
@@ -3,22 +3,47 @@
 .filterOptions{
   z-index: 9999;
   height: 300px;
-  
-  padding: 1.5rem;
+  width:300px;
+  padding: 1rem 1.5rem;
   background-color: #FFFFFF;
   box-shadow: $shadow-grey 0px 2px 8px 0px;
   border-radius: 24px;
+  display: flex;
+  flex-direction: column;
   position: relative;
 
   footer {
-    position: absolute;
-    right: 1.5rem;
-    bottom: 1.5rem;
+    position: relative;
+    flex: 2;
+    display: inline;
+    border-top: 1px solid $button-grey-hover;
+    
+    .filterOptions__clear {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      height: 2rem;
+      padding: 0 1rem;
+      background-color: $button-orange;
+      color: #FFFFFF;
+      border-radius: 24px;
+      display: flex;
+      align-items: center;
+      border: none;
+      gap: 0.5rem;
+      transition: $transition-3;
+
+      &:hover {
+        background-color: $button-orange-hover;
+        cursor: pointer;
+      }
+    }
   }
 }
 
 .filterOptions__list {
-  height: 200px;
+  flex: 10;
+  height: 220px;
   overflow: scroll;
 
   position: relative;
@@ -47,7 +72,7 @@
     }
 
     input::before {
-      background-color: $light-orange;
+      background-color: $button-orange;
       border-radius: 2px;
       content: "";
       width: 10px;
