--- a/frontend/src/styles/SortOptionsCard.scss
+++ b/frontend/src/styles/SortOptionsCard.scss
@@ -3,7 +3,7 @@
 .sortOptions {
   z-index: 9999;
   overflow: scroll;
-  padding: 1.5rem;
+  padding: 1rem 1.5rem;
   background-color: #FFFFFF;
   border-radius: 24px;
   display: flex;
