feat: update line colours

--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -105,7 +105,7 @@ $square-dimension: 650px;
 .one-visit--line {
   width: 100%;
   border: none;
-  border-top: 1.5px solid var(--shadow);
+  border-top: 1.5px solid var(--line-color);
 }
 
 .one-visit__visit-details--container {
