--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -7,7 +7,7 @@
   --page-background-accent: #efefef;
   --weather: #F5F5F5;
   --text-color: black;
-  --text-nav-button: #191919;
+  --line-color: #dcdcdc;
   --text-light: #757575;
   --text-grey: #5d5d5d;
   --button-highlight-color: #F86204;
@@ -28,7 +28,7 @@
   --page-background-accent: #202020;
   --weather: #202020;
   --text-color: #eee9e9;
-  --text-nav-button: #191919;
+  --line-color: #c9c9c9;
   --text-light: #a5a5a5;
   --text-grey: #909090;
   --button-highlight-color: #F86204;
@@ -37,7 +37,7 @@
   --button-color-hover: #4a4a4a;
   --button-disabled: #474747;
   --input-outline: #252525;
-  --light-orange: #FCBC94;
+  --light-orange: #ffa66f;
   --light-pink: #F7B09D;
   --sunny: #FCA712;
   --shadow: #111111;
