--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -76,7 +76,7 @@
 
 .user-info__visits {
   flex-direction: column;
-  border-left: 2px solid var(--text-light);
+  border-left: 2px solid var(--line-color);
   
 
   p {
