--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,9 +1,13 @@
 @import '_theme.scss';
 @import 'index.scss';
 
+.home__header {
+  position: relative;
+}
+
 .welcome__section {
   position: absolute;
-  top: 360px;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -30%);
   text-align: center;
@@ -40,7 +44,7 @@
 
 .homepage-search__input { 
   font-size: 1rem;
-  width: 500px;
+  width: 100%;
   height: 52px;
   box-shadow: 0 4px 8px -2px var(--shadow);
   border-radius: 9999px;
